--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,11 @@
 theme: jekyll-theme-cayman
 
+# Name of your site (displayed in the header)
+name: Bwuah.me
+
+# Short bio or description (displayed in the header) 
+description: Bwuaaaaah!!
+
 footer-links: 
   dribbble: 
   email: github@bwuah.me
