--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@
 # Name of your site (displayed in the header)
 name: Bwuah.me
 
+title: Bwuah.me
+
 # Short bio or description (displayed in the header) 
 description: Bwuaaaaah!!
 
