--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ name: Bwuah.me
 title: Bwuah.me
 
 # Short bio or description (displayed in the header) 
-description: Bwuaaaaah!!
+# description: Bwuaaaaah!!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic) 
 avatar: https://avatars2.githubusercontent.com/u/43686459?s=400&v=4
